Center search icon on mobile and fix spelling errors

--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,7 @@
 
     1% {
         opacity: 0;
-        /* Bring elements to forground then fade up */
+        /* Bring elements to foreground then fade up */
         transform: translateY(0%);
     }
 
@@ -97,7 +97,7 @@ header #header-icon img {
     left: 20px;
     transform: translateY(-50%);
     padding: 0px;
-    /* Get the height of the header and subtracked 10px */
+    /* Get the height of the header and subtracted 10px */
     height: 13px;
 
 }
@@ -122,7 +122,7 @@ header #desktop-nav ul {
 }
 
 header #desktop-nav li {
-    /* Display items horizontaly */
+    /* Display items horizontally */
     display: inline-block;
     list-style: none;
     margin: 0px;
@@ -355,6 +355,11 @@ header #siteSearchResult #no-results--error {
 
     header #search-button {
         width: 20px;
+        margin-top: 18px;
+    }
+
+    header #searchBar input:focus+#search-button {
+        margin-top: 28px;
     }
 
     header #searchBar {
